--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,3 @@
-:root {
-  --fontSize: 15px;
-  --fv-n-r-fs-a4f: 0px;
-}
-
 .syntex-code{
   position: relative;
 }
@@ -13,7 +8,6 @@
   background-color: #212826;
   color: #cfcfcf;
   font-family: monospace;
-  font-size: var(--fontSize);
   line-height: normal;
   outline: none;
   white-space: pre;
@@ -26,6 +20,7 @@
   width: 100%;
   height: 100%;
   outline: none;
+  margin-left: 0;
 }
 
 #numberRow {
@@ -78,7 +73,6 @@
   display: inline-block;
   padding-right: 10px;
   padding-left: 15px;
-  width: var(--fv-n-r-fs-a4f);
   height: 20px;
   text-align: right;
   border-right: 1px solid #666;
@@ -87,5 +81,5 @@
   display: block;
   width: 100%;
   height: 20px;
-  padding-left: calc(var(--fv-n-r-fs-a4f) + 30px);
+  /* padding-left: calc(var(--fv-n-r-fs-a4f) + 30px); */
 }
