--- a/src/JavaScript/style.css
+++ b/src/JavaScript/style.css
@@ -1,11 +1,9 @@
-.syntex-code{
-  position: relative;
-}
-
-.js-syntex {
+.js-colorful {
+  display: inherit;
   margin: 5px;
   padding: 5px;
-  background-color: #212826;
+  resize: both;
+  background-color: #152521;
   color: #fff;
   font-family: monospace;
   line-height: normal;
@@ -14,18 +12,24 @@
   overflow: auto;
 }
 
+.colorful-code{
+  width: inherit;
+  height: inherit;
+  position: relative;
+  display: inherit;
+}
+
 #output {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
   outline: none;
+  display: inherit;
   margin-left: 0;
 }
 
 #numberRow {
-  /* top: 0;
-  left: 0; */
   height: 100%;
   width: var(--fv-n-r-fs-a4f);
 }
@@ -44,7 +48,7 @@
 .js-number{
   color:#fc9535;
 }
-.js-function{
+.js-special{
   color:#3cbef2;
 }
 .js-method{
@@ -81,7 +85,7 @@
   border-right: 1px solid #666;
 }
 .js-newline {
-  display: block;
+  display: inherit;
   width: 100%;
   height: 20px;
   /* padding-left: calc(var(--fv-n-r-fs-a4f) + 30px); */
