--- a/src/JavaScript/style.css
+++ b/src/JavaScript/style.css
@@ -17,21 +17,18 @@
   height: inherit;
   position: relative;
   display: inherit;
+  outline: none;
 }
 
-#output {
-  position: absolute;
-  top: 0;
+.colorful-output {
   width: 100%;
   height: 100%;
-  outline: none;
   display: inherit;
   margin-left: 0;
+  outline: none;
 }
-
-#numberRow {
-  height: 100%;
-  width: var(--fv-n-r-fs-a4f);
+.colorful-output span {
+  outline: none;
 }
 .js-string {
   color:#1cca41;
@@ -43,13 +40,10 @@
   color:#777;
 }
 .js-operator{
-  color:#cbdee0;
+  color:#1598a7;
 }
 .js-number{
   color:#fc9535;
-}
-.js-special{
-  color:#3cbef2;
 }
 .js-method{
   color:#80cc43;
@@ -70,18 +64,11 @@
 .js-objprop {
   color:#e9e482;
 }
-/* .js-name {
-  color: #9CDCFE;
-} */
-.js-nulltype {
-  color: #ee4e1d;
-}
-.js-intent {
-  display: inline-block;
+.colorful-numberRow {
   padding-right: 10px;
   padding-left: 15px;
-  height: 20px;
   text-align: right;
+  width: min-content;
   border-right: 1px solid #666;
 }
 .js-newline {
