--- a/src/JavaScript/style.css
+++ b/src/JavaScript/style.css
@@ -13,21 +13,15 @@
 }
 
 .colorful-code{
-  width: inherit;
-  height: inherit;
   position: relative;
   display: inherit;
   outline: none;
-}
-
-.colorful-output {
   width: 100%;
   height: 100%;
-  display: inherit;
   margin-left: 0;
-  outline: none;
 }
-.colorful-output span {
+
+.colorful-code span {
   outline: none;
   display: inline-block;
 }
@@ -66,15 +60,11 @@
   color:#e9e482;
 }
 .colorful-numberRow {
+  display: inherit;
   padding-right: 10px;
   padding-left: 15px;
   text-align: right;
   width: min-content;
   border-right: 1px solid #666;
-}
-.js-newline {
-  display: inherit;
-  width: 100%;
-  height: 20px;
-  /* padding-left: calc(var(--fv-n-r-fs-a4f) + 30px); */
+  color: #888;
 }
