--- a/test/myStyle.css
+++ b/test/myStyle.css
@@ -6,7 +6,6 @@ html, body {
 }
 
 .container {
-  position: relative;
   height: 100%;
   width: 100%;
   padding: 0px;
@@ -15,4 +14,36 @@ html, body {
 .block {
   border: 1px solid #222;
   padding: 5px;
+}
+.b1 {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 60px;
+  border: 1px solid #222;
+  height: 200px;
+}
+
+#editor-output, #editor-active {
+  display: block;
+  height: 200px;
+  width: 100%;
+  resize: none;
+  padding: 4px;
+  margin: 0;
+  border :none;
+  font-size:16px;
+}
+
+#editor-output {
+  overflow: hidden;
+}
+#editor-active {
+  overflow: scroll;
+  white-space: pre;
+  transform: translateY(-100%);
+  background-color: transparent;
+  color: transparent;
+  caret-color: #fff;
 }
