--- a/test/myStyle.css
+++ b/test/myStyle.css
@@ -4,7 +4,9 @@ html, body {
   background-color: #38618a;
   color: white;
 }
-
+body {
+  /* display: none; */
+}
 .container {
   height: 100%;
   width: 100%;
