--- a/extensions/Precisifier/test/style.css
+++ b/extensions/Precisifier/test/style.css
@@ -29,6 +29,7 @@ button {
   outline: none;
   background-color: var(--bg-color);
   color: var(--text-color);
+  overflow: auto;
 }
 input[type="text"] {
   border: none;
@@ -141,9 +142,11 @@ header {
 
 #output-code, #code {
   width: 100%;
+  margin-top: 0;
   border: 1px solid var(--border-color);
 }
 
-#output-code > * {
-  width: 100%;
+#output-code > code {
+  padding-top: 5px;
+  width: calc(100% - 10px);
 }
