--- a/extensions/Precisifier/test/style.css
+++ b/extensions/Precisifier/test/style.css
@@ -140,7 +140,8 @@ header {
   height: 30px;
 }
 
-#output-code, #code {
+#output-code,
+#code {
   width: 100%;
   margin-top: 0;
   border: 1px solid var(--border-color);
