--- a/test/myStyle.css
+++ b/test/myStyle.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   padding: 0px;
   font-family: sans-serif;
   background-color: #38618a;
@@ -26,15 +27,16 @@ html, body {
   height: 200px;
 }
 
-#editor-output, #editor-active {
+#editor-output,
+#editor-active {
   display: block;
   height: 200px;
   width: 100%;
   resize: none;
   padding: 4px;
   margin: 0;
-  border :none;
-  font-size:16px;
+  border: none;
+  font-size: 16px;
 }
 
 #editor-output {
@@ -48,4 +50,8 @@ html, body {
   background-color: transparent;
   color: transparent;
   caret-color: #fff;
+}
+
+.blank {
+  display: none;
 }
