--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
   background-color: #101515;
   white-space: pre;
   justify-content: flex-start;
-  padding: 10px;
+  padding: 8px;
   resize: none;
   overflow: auto;
 }
@@ -17,14 +17,14 @@
   display: block;
   background-color: #101515;
   position: relative;
-  padding-left: 10px;
+  padding-left: 2px;
   tab-size: 4;
   width: min-content;
   resize: none;
 }
 .numberRow-cf {
   padding-right: 10px;
-  padding-left: 15px;
+  padding-left: 0;
   text-align: right;
   width: min-content;
   border-right: 1px solid #666;
